--- a/src/site/styles/fonts.scss
+++ b/src/site/styles/fonts.scss
@@ -107,7 +107,6 @@
   font-family: SolberaImitationRemake;
   src: url("../fonts/Solbera Imitation Tweak.woff2");
   font-weight: 100 1000;
-  font-style: normal;
   font-style: italic;
 }
 
